# shell-settings

./: .aliasrc-shell-settings  .autosetup.macos  .direnvrc  .env  .env.litellm  .envrc  .generic.env  .gitignore  .gitmodules  .llm_config  .mise.toml  .pre-commit-config.yaml  .vimrc  .zsh-shell-settings  .zshrc  AGENTS.md  CLAUDE.md  GEMINI.md  IMMEDIATE.md  README.md  UV_MIGRATION_PLAN.md  brew-install-aarch64-linux.sh  bun.lockb  chatgpt-shell  crawl4ai.md  example_usage.py  git_config_example  install-litellms.sh  install_unison.sh  integration_test.py  jens-disagrees.zsh-theme  litellm.config.yaml  llm  llm_cli.py  llm_client.py  m4.txt  mk-notes  oh-my-zsh.setup.sh  out.tmp  package-lock.json  (+19 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.docs/: ggml-org_whisper.cpp.c7.json  ggml-org_whisper.cpp.c7.md  huggingface_smolagents.c7.json  huggingface_smolagents.c7.md  loopwork-ai_emcee.c7.json  loopwork_emcee.c7.md  ollama_ollama.c7.json  ollama_ollama.c7.md  pkgx.txt  punkpeye_awesome-mcp-clients.c7.json  punkpeye_awesome-mcp-clients.c7.md  run-llama_llama_index.c7.json  run-llama_llama_index.c7.md  sigoden_aichat.c7.json  sigoden_aichat.c7.md  sigoden_llm-functions.c7.md
.github/: workflows
.zsh_completions/: _rde  _zsh_bun  _zsh_npm  _zsh_yarn
3d-printing/: printer.cfg.freedi  printer.cfg.original
ai/: prompt.tmp
bin-aliases/: mdc
configurations/: README.md
docs/: linux.md  nginx.md  screen-on-ssh.md
example-scripts/: code-ssh  screen-on-ssh
macos/: README.md
nvim/: autoload  default.vim  init.vim  keybindings.vim  plugins.vim  (+1 more)
(+143 files in other folders)
