[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.1.0"
description = "A client for interacting with LLMs with automatic fallback capability"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "crawl4ai",
    "openai",
    "requests",
    "python-dotenv",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
py-modules = ["llm_cli", "llm_client", "llm"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
